@@ -1,14 +1,14 @@
 library(googleVis)
 
 shinyServer(function(input, output) {
-  datasetInput <- reactive(function() {
+  datasetInput <- reactive({
     switch(input$dataset,
            "rock" = rock,
            "pressure" = pressure,
            "cars" = cars)
   })
   
-  output$view <- reactiveGvis(function() {
+  output$view <- renderGvis({
     gvisScatterChart(datasetInput())
   })
 })
